--- a/website/.htaccess
+++ b/website/.htaccess
@@ -1,3 +1,6 @@
 RewriteEngine on
-RewriteCond $1 !^(index\.php|images|robots\.txt)
-RewriteRule ^(.*)$ /dtstrike/index.php/$1 [L]
+RewriteBase /dtstrike/
+
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ index.php/$1 [L]
