--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+/starters/Go/launcher.test
+/starters/Go/main
+/starters/Go/maps/replay.txt
+/starters/Go/src/launcher/Launcher_test.go~
 /Bot/bin/*
 bin
 dist
