--- a/server/ITWarsEngine/engine/run.conf
+++ b/server/ITWarsEngine/engine/run.conf
@@ -7,6 +7,7 @@
 map=maps\2\map1.txt
 
 # Commande servant à lancer votre bot
-#   Exemple : java -jar engine.jar six.challenge.bot.RandomBot
-#bot_cmd=php MyBot.php
-bot_cmd=java -jar engine.jar six.challenge.bot.RandomBot
+#   Exemples :
+#      java -jar engine.jar six.challenge.bot.RandomBot
+#      php MyBot.php
+bot_cmd=java -cp engine.jar six.challenge.bot.RandomBot
