--- a/website/.htaccess
+++ b/website/.htaccess
@@ -1,5 +1,5 @@
 RewriteEngine on
-RewriteBase /sixchallenge/
+RewriteBase /challenge/
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
