--- a/starters/build.xml
+++ b/starters/build.xml
@@ -46,4 +46,14 @@
 		<foreach list="${starterList}" target="zipStarter" param="var" />
 	</target>
 	
+
+	<target name="copy_to_site" depends="pkg_all">
+		<!-- Build all starters -->
+		<foreach list="${starterList}" target="zipStarter" param="var" />
+		<delete dir="dist/temp" />
+		<copy todir="../website/starters" overwrite="true">
+			<fileset dir="dist" />
+		</copy>
+	</target>
+	
 </project>
