Up to 6 players !

--- a/server/ITWarsEngine/engine/run.conf
+++ b/server/ITWarsEngine/engine/run.conf
@@ -3,7 +3,7 @@
 # Maps sur laquelle il faut lancer la partie
 #   /!\ Le sous dossier sert à déterminer le nombre de joueurs de la map
 #
-#   Exemples : maps\2\map1.txt | maps\3\map34.txt | maps\4\map67.txt
+#   Exemples : maps\2\map1.txt | maps\3\map34.txt | maps\4\map67.txt | maps\5\map100.txt | maps\6\map133.txt
 map=maps\2\map1.txt
 
 # Commande servant à lancer votre bot
