Correction du bot scala d'exemple

--- a/server/ITWarsEngine/engine/run.conf
+++ b/server/ITWarsEngine/engine/run.conf
@@ -8,6 +8,7 @@ map=maps\2\map1.txt
 
 # Commande servant à lancer votre bot
 #   Exemples :
-#      java -jar engine.jar six.challenge.bot.RandomBot
+#      java -jar ../MyBot.jar MyBot
 #      php MyBot.php
+#      scala -cp ../MyBot.jar MyBot
 bot_cmd=java -cp engine.jar six.challenge.bot.RandomBot
