Ajout de la commande pour lancer les bots py et js en local

--- a/server/ITWarsEngine/engine/run.sh.conf
+++ b/server/ITWarsEngine/engine/run.sh.conf
@@ -9,6 +9,8 @@ map="maps/3/map33.txt"
 # Commande servant à lancer votre bot
 #   Exemples :
 #	"java -jar MyBot.jar MyBot"
-#	"php MyBot.php"
+#	"php ../MyBot.php"
 #	"scala -cp ../MyBot.jar MyBot"
+#	"node ../MyBot.js"
+#	"python ../MyBot.py"
 bot_cmd="java -cp engine.jar six.challenge.bot.RandomBot"
