--- a/worker/setup/chroot_configs/sources.list.template
+++ b/worker/setup/chroot_configs/sources.list.template
@@ -1,3 +1,2 @@
-
-deb http://ftp.fr.debian.org/debian/ wheezy main non-free contrib
-deb http://security.debian.org/ wheezy/updates main contrib non-free
+deb http://wwwftp.ciril.fr/pub/linux/ubuntu/archives/ saucy main restricted universe multiverse
+deb http://wwwftp.ciril.fr/pub/linux/ubuntu/archives/ saucy-updates main restricted universe multiverse
