Ajout du mode random pour le nombre de joueurs et la map

--- a/server/ITWarsEngine/engine/run.conf
+++ b/server/ITWarsEngine/engine/run.conf
@@ -4,7 +4,9 @@
 #   /!\ Le sous dossier sert à déterminer le nombre de joueurs de la map
 #
 #   Exemples : maps\2\map1.txt | maps\3\map33.txt | maps\4\map66.txt | maps\5\map100.txt | maps\6\map133.txt
-map=maps\2\map1.txt
+#
+#   Le mot clé "random" permet de choisir une map aléatoirement
+map=random
 
 # Commande servant à lancer votre bot
 #   Exemples :
